fix z-index problem between loading animation and #first.content

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1000000000;
 }
 
 #first .heading .details {
@@ -570,7 +571,7 @@ body {
     height: 100%;
     width: 100%;
     background: #141e30;
-    z-index: 1000000000;
+    z-index: 100000;
     overflow-y: hidden;
     /* animation-name: show-website; */
     animation-duration: 1s;
